<resources>
    <string name="app_name">SatbayevUniversity</string>
    <string name="login_hello">Добро пожаловать!</string>
    <string name="et_login_hint">ЛОГИН</string>
    <string name="et_password_hint">ПАРОЛЬ</string>
    <string name="btn_login">Войти</string>
    <string name="btn_login_exit">Выйти (v3.6)</string>
    <string name="open">открыто</string>
    <string name="close">закрыто</string>
    <string name="academicProgress">Успеваемость</string>
    <string name="umkd">УМКД</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выход (v3.6)</string>
    <string name="journal">Журнал</string>
    <string name="exam">Экзамены</string>
    <string name="schedule">Расписание</string>
    <string name="grade">Оценки</string>
    <string name="notifications">Уведомления</string>
    <string name="courseName">Course Name</string>
    <string name="creditsName">Credits</string>
    <string name="pointsName">Points</string>
    <string name="gradeName">Grade</string>
    <string name="gradeP">P=0.0</string>
    <string name="format">%1$td/%1$tm/%1$tY</string>
    <string name="nullString">0</string>
    <string name="nullDoubleString">0.0</string>
    <string name="thanks">Спасибо за то, что Вы с нами!</string>
    <string name="files">Файлы</string>
    <string name="data">К сожалению, данные по данному запросу отсутствуют</string>
    <string name="rest">Отдыхаем!</string>
    <string name="complaintShort">Коротко опишите проблему</string>
    <string name="ready">Готово</string>
    <string name="beta_version">BETA VERSION</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="att_1">Att.1</string>
    <string name="att_2">Att.2</string>
    <string name="finalBar">Final</string>
    <string name="total">Total</string>
    <string name="nullString2"> </string>
    <string name="navigation_drawer_open">opened</string>
    <string name="navigation_drawer_close">close</string>
    <string name="complaint">Сообщить об ошибке</string>
    <string name="profilePhoto">Фотография профиля</string>
    <string name="chooseLng">Выберите язык</string>
    <string name="getLng">Язык изменен</string>
    <string name="internetConnection">нет доступа к сети</string>
    <string name="sendComplaint">Готово</string>
    <string name="cancelComplaint">Отменить</string>
    <string name="writeComplaint">Заполните жалобу!</string>
    <string name="missed">пропусков</string>
    <string name="only_server" translatable="false">onlyServer</string>
    <string name="monday">пн</string>
    <string name="tuesday">вт</string>
    <string name="wednesday">ср</string>
    <string name="thursday">чт</string>
    <string name="friday">пт</string>
    <string name="saturday">сб</string>
    <string name="sunday">вс</string>
    <string name="click_back_again">Нажмите кнопку назад еще раз чтобы выйти</string>
    <string name="ask_permission_to_rw_external_storage">Нужно дать разрешение для сохранение файла</string>
    <string name="set_push_notification">Мы настроили пуш-уведомления ! Если вам будут приходить \"левые\" уведомления, то сообщите нам об этом.</string>
    <string name="ok">ok</string>
    <string name="hello">Привет !</string>
    <string name="main_info">Основные данные</string>
    <string name="choosing_education_programm">Выбор образовательной программы</string>
    <string name="residence_info">Место жительства</string>
    <string name="info_about_education">Данные об образовании</string>
    <string name="medical_info">Мед. данные</string>
    <string name="achievement">Достижения</string>
    <string name="labor_activity">Трудовая деятельность</string>
    <string name="additional">Дополнительно</string>
    <string name="enrollee">Я абитуриент</string>
    <string name="upload">Загрузить</string>
    <string name="enrollee_status">Статус абитуриента</string>
    <string name="english_chars">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="citizen_category">Категория граждан</string>
    <string name="citizenship">Гражданство</string>
    <string name="photo">Фото</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="second_name">Отчество</string>
    <string name="name_english">Имя на английском</string>
    <string name="second_name_english">Отчество на английском</string>
    <string name="surname_english">Фамилия на английском</string>
    <string name="birth_date">Дата рождения</string>
    <string name="birth_place">Место рождения</string>
    <string name="phone_number">Номер сотового телефона</string>
    <string name="email">Электронная почта</string>
    <string name="document_type">Вид документа</string>
    <string name="nationality">Национальность</string>
    <string name="choosing_gender">Выбор пола</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="marital_status">Семейное положение</string>
    <string name="document">Удостоверение личности/Паспорт</string>
    <string name="document_number">№ удостоверения личности/паспорта</string>
    <string name="document_receive_date">Дата выдачи документа</string>
    <string name="document_issue_organization">Кем выдан документ</string>
    <string name="hear_about_type">Как вы узнали про Satbayev University?</string>
    <string name="why_choose_university">Почему вы выбрали Satbayev University?</string>
    <string name="iin">ИИН</string>
    <string name="verify_your_email">На указанную Вами эл. почту выслан код подтверждения. Пожалуйста введите его в поле ниже чтобы продолжить</string>
    <string name="verify_your_email_button">Подтвердить почту</string>
    <string name="save">Сохранить</string>
    <string name="bachelor">Бакалавриат</string>
    <string name="master">Магистратура</string>
    <string name="doctor">Докторантура</string>
    <string name="your_login_and_password">На указанную Вами эл. почту выслан пароль для последующего входа в кабинет абитуриента/поступающего\n\n<b>Логин - %1$s\nПароль - %2$s</b></string>
    <string name="place_of_permanent_residence">Место постоянной прописки</string>
    <string name="country">Страна</string>
    <string name="region">Область/Город</string>
    <string name="district_or_city">Район/Город</string>
    <string name="area">Населенный пункт</string>
    <string name="need_in_accomodation">Нуждаетесь ли вы в общежитий ?</string>
    <string name="priveleges">Привелигий</string>
    <string name="accomodation_in_almaty">Проживание в г.Алматы</string>
    <string name="district_in_almaty">Район г. Алматы</string>
    <string name="address_in_almaty">Улица, № дома</string>
    <string name="result">Результат</string>
    <string name="fluorography_date">Дата прохождения флюорографии</string>
    <string name="eligable">Годен</string>
    <string name="not_eligable">Не годен</string>
    <string name="rejection_reason">Причина отказа</string>
    <string name="education_language">Язык обучения</string>
    <string name="average_score_of_cert_or_diploma">Средний балл аттестата/диплома</string>
    <string name="issue_date_of_cert_or_diploma">Дата выдачи аттестата / диплома</string>
    <string name="edu_document_type">Вид аттестата / диплома</string>
    <string name="edu_document_number">№ аттестата / диплома</string>
    <string name="diploma">Диплом</string>
    <string name="attestat">Аттестат</string>
    <string name="second_higher">Второе высшее</string>
    <string name="certificate_or_diploma">Аттестат / диплом</string>
    <string name="grant_certificate">Свидетельство о гранте</string>
    <string name="grant_certificate_number">Номер свидетельства о гранте</string>
    <string name="rural_quota">Сельская квота</string>
    <string name="ielts_certificate">Сертификат IELTS</string>
    <string name="certificate_toefl">Сертификат TOEFL</string>
    <string name="info_about_school">Информация о школе</string>
    <string name="city">Город</string>
    <string name="village">Село</string>
    <string name="city_or_village">Город/село</string>
    <string name="school_type">Тип учебного учреждения</string>
    <string name="school">Школа</string>
    <string name="college">Колледж</string>
    <string name="selection_of_document_on_completion_of_education">Выбор документа об окончании среднего / специального /высшего образования:</string>
    <string name="do_you_own_state_grant">Являетесь ли Вы обладателем государственного гранта</string>
    <string name="do_you_have_english_certificate">Имеется ли у вас сертификат по английском языку?</string>
    <string name="city_settlement_type">Тип населенного пункта</string>
    <string name="university_one">ВУЗ 1:</string>
    <string name="op_speciality">ОП / Специальность</string>
    <string name="op_form_of_study">ОП / Форма обучения:</string>
    <string name="term_of_study">Срок обучения:</string>
    <string name="payment_form">Форма оплаты:</string>
    <string name="preffered_language_of_education">Предпочитаемый язык обучения:</string>
    <string name="kazakh_national_research_technical_university">029 Казахский национальный исследовательский технический университет имени К.И.Сатпаева</string>
    <string name="add_scientific_work">Добавить научный труд</string>
    <string name="do_you_have_scientific_work">Есть ли у вас научные труды ?</string>
    <string name="additional_info">Дополнительные сведения</string>
    <string name="info_about_health">Сведения о состоянии здоровья</string>
    <string name="employment_history">Трудовая книжка</string>
    <string name="place_of_work">Место работы</string>
    <string name="position">Должность</string>
    <string name="address">Место нахождения</string>
    <string name="start_of_work">Начало труд. деятельности</string>
    <string name="end_of_work">Конец труд. деятельности</string>
    <string name="place_of_work_department_organ">Место работы (учреждение, управление, отдел)</string>
    <string name="guarantee_letter">Гарантийное письмо</string>
    <string name="grant_types">Тип гранта</string>
    <string name="group_education_program">Группа оброзовательных программ</string>
    <string name="corporate">Корпоративный</string>
    <string name="individual">Физическое лицо</string>
    <string name="direction_type">Вид направления</string>
    <string name="add_university">Добавить ВУЗ</string>
    <string name="graduated_university">ВУЗ, который вы окончили</string>
    <string name="graduation_year">Год окончания ВУЗа</string>
    <string name="gpa">Средний балл приложения к диплому / GPA</string>
    <string name="diploma_and_diploma_suplement">Диплом и приложение к диплому</string>
    <string name="appeal">Подать</string>
    <string name="total_score">Итоговый балл</string>
    <string name="appeal_results">Результаты апелляции</string>
    <string name="in_specialized_discipline">По профильной дисциплине</string>
    <string name="in_foreign_language">По иностранному языку</string>
    <string name="research_proposal">Research proposal</string>
    <string name="direction">Направление</string>
    <string name="motivational_note">Мотивационная записка</string>
    <string name="persons_kazakh_nationality_who_has_not_citizenship_of_RK">Лица, казахской нац-сти, не имеющ. гражданства РК</string>
    <string name="notarized_translation_of_passport_or_diploma">Нотариально заверенные переводы паспорта и аттестатов/дипломов</string>
    <string name="send">Отправить</string>
    <string name="check_status">Просмотр статуса</string>
    <string name="data_filling">Заполнение данных</string>
    <string name="current_status_of_applicant">Текущий статус абитуриента</string>
    <string name="checked_admission_commission">Данные проверены оператором приемной комиссии</string>
    <string name="filled_by_medical_practitioner">Данные заполнены медицинским работником</string>
</resources>