<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/data_filling">
        <menu>
            <group
                android:id="@+id/group1"
                    android:checkableBehavior="single">
                <item
                    android:id="@+id/main_data"
                    android:title="@string/main_info"
                    android:icon="@drawable/ic_main_data"/>

                <item
                    android:id="@+id/choosing_education_programm"
                    android:title="@string/choosing_education_programm"
                    android:icon="@drawable/ic_school_black"/>
                <item
                    android:id="@+id/residence"
                    android:title="@string/residence_info"
                    android:icon="@drawable/ic_location_on_black"/>
                <item
                    android:id="@+id/info_about_education"
                    android:title="@string/info_about_education"
                    android:icon="@drawable/ic_laptop_chromebook_black"/>
                <item
                    android:id="@+id/achievement"
                    android:title="@string/achievement"
                    android:icon="@drawable/ic_cup"/>
                <item
                    android:id="@+id/labor_activity"
                    android:title="@string/labor_activity"
                    android:icon="@drawable/ic_work_black"/>
                <item
                    android:id="@+id/additional"
                    android:title="@string/additional"
                    android:icon="@drawable/ic_comment_black"/>
                <item
                    android:id="@+id/medical_data"
                    android:title="@string/medical_info"
                    android:icon="@drawable/ic_local_hospital_black"/>
            </group>
        </menu>
    </item>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/check_status"
            android:title="@string/check_status"
            android:icon="@drawable/ic_check_box_black"/>
        <item
            android:id="@+id/send_info"
            android:title="@string/send"
            android:icon="@drawable/ic_send_black"/>
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/exit"
            android:title="@string/btn_login_exit"
            android:icon="@drawable/ic_exit_to_app_black"/>
    </group>
</menu>