<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/academicProgress"
            android:title="@string/academicProgress"
            android:icon="@drawable/graduate" />
        <item
            android:id="@+id/umkd"
            android:title="@string/umkd"
            android:icon="@drawable/school"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/waitin"/>
<!--        <item-->
<!--            android:id="@+id/references"-->
<!--            android:title="@string/references"-->
<!--            android:icon="@drawable/references"/>-->
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/running"/>
    </group>
</menu>
