<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="educationInfo"
            type="kz.almaty.satbayevuniversity.data.entity.admission.education_info.EducationInfo" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding"
                android:background="@drawable/background_gradient">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding"
                        android:orientation="vertical">
                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/certificate_or_diploma"
                            android:textStyle="bold"
                            android:textSize="20sp"/>
                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selection_of_document_on_completion_of_education"
                            android:layout_marginTop="@dimen/field_registration_margin_top"/>

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/second_higher"/>

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/attestat"
                                android:checked="@{educationInfo.educationDocument==1}"/>
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/diploma"
                                android:checked="@{educationInfo.educationDocument==2}"/>
                        </RadioGroup>

                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/education_language"
                            android:layout_marginTop="@dimen/field_registration_margin_top"/>
                        <Spinner
                            android:id="@+id/eduLanguagesSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edu_document_number"
                            android:layout_marginTop="@dimen/field_registration_margin_top"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{educationInfo.certificateNumber}"
                            />

                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edu_document_type"
                            android:layout_marginTop="@dimen/field_registration_margin_top"/>
                        <Spinner
                            android:id="@+id/eduDocumentTypesSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/issue_date_of_cert_or_diploma"
                            android:layout_marginTop="@dimen/field_registration_margin_top"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{educationInfo.issueDateOfCertificateOrDiploma}"/>

                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/average_score_of_cert_or_diploma"
                            android:layout_marginTop="@dimen/field_registration_margin_top"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(educationInfo.averageScoreOfCertOrDiploma)}"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    android:layout_marginTop="@dimen/field_registration_margin_top">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding"
                        android:orientation="vertical">
                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/grant_certificate"
                            android:textStyle="bold"
                            android:textSize="20sp"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/do_you_own_state_grant"
                            android:layout_marginTop="@dimen/field_registration_margin_top"/>

                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/field_registration_margin_top"
                            android:text="@string/grant_certificate_number"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/field_registration_margin_top"
                            android:text="@string/rural_quota"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:layout_marginTop="@dimen/field_registration_margin_top">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do_you_have_english_certificate"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <CheckBox
                        android:id="@+id/ielts_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ielts_certificate"
                        android:checked="@{educationInfo.ieltsCert.has}"/>
                    <include
                        android:id="@+id/ielts_linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        layout="@layout/layout_ielts"
                        app:ieltsCert="@{educationInfo.ieltsCert}"
                        android:visibility="gone"
                        />
                    <CheckBox
                        android:id="@+id/toefl_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/certificate_toefl"
                        android:checked="@{educationInfo.toeflCert.has}"/>
                    <include
                        android:id="@+id/toefl_linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        layout="@layout/layout_toefl"
                        app:toeflCert="@{educationInfo.toeflCert}"
                        android:visibility="gone"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:layout_marginTop="@dimen/field_registration_margin_top">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_about_school"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_settlement_type"
                        android:layout_marginTop="@dimen/field_registration_margin_top"/>
                    <RadioGroup
                        android:id="@+id/citySettlementTypeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/cityRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/city"
                            android:checked="@{educationInfo.isCitySettlementType}"/>
                        <RadioButton
                            android:id="@+id/villageRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/village"
                            android:checked="@{!educationInfo.isCitySettlementType}"/>
                    </RadioGroup>

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_or_village"
                        android:layout_marginTop="@dimen/field_registration_margin_top"/>
                    <AutoCompleteTextView
                        android:id="@+id/city_name_autoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{educationInfo.cityOfSchoolLocation.title}"
                        />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school_type"
                        android:layout_marginTop="@dimen/field_registration_margin_top"/>
                    <RadioGroup
                        android:id="@+id/schoolTypeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <RadioButton
                            android:id="@+id/collegeRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/college"
                            android:checked="@{educationInfo.educationInstituteType==3}"/>
                        <RadioButton
                            android:id="@+id/schoolRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/school"
                            android:checked="@{educationInfo.educationInstituteType==1}"/>
                    </RadioGroup>

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Название Школы / Лицея / Колледжа"
                        android:layout_marginTop="@dimen/field_registration_margin_top"
                        />
                    <AutoCompleteTextView
                        android:id="@+id/nameOfSchoolACTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{educationInfo.nameOfSchool.title}"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/layout_save_button"
                    android:layout_marginTop="@dimen/field_registration_margin_top"/>
            </LinearLayout>


        </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateDrawable="@drawable/progress"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
