<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@+id/academicProgress11">

    <fragment
        android:id="@+id/academicProgress11"
        android:name="kz.almaty.satbayevuniversity.ui.academicProgress.AcademicFragment"
        android:label="@string/academicProgress"
        tools:layout="@layout/fragment_academic">
        <action
            android:id="@+id/action_academicProgress11_to_umkdFragment"
            app:destination="@id/umkdFragment" />
    </fragment>

    <fragment
        android:id="@+id/umkdFragment"
        android:name="kz.almaty.satbayevuniversity.ui.umkd.UmkdFragment"
        android:label="@string/umkd"
        tools:layout="@layout/fragment_umkd">
        <action
            android:id="@+id/action_umkdFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="kz.almaty.satbayevuniversity.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>