<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_status_of_applicant"/>
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <CheckBox
                android:id="@+id/isCheckedByAdmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checked_admission_commission"
                />
            <CheckBox
                android:id="@+id/isCheckedByDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filled_by_medical_practitioner"
                />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
</layout>